[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Art/Pixilart_Sprite_Sheet_2.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=7]
radius = 7.33333
height = 1.33333

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 50, 50 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="area_shape_entered" from="." to="." method="_on_Player_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
